# compute-shader-101

prefix-sum-rust/: Cargo.toml
prefix-sum-rust/shaders/: Cargo.toml
prefix-sum-rust/shaders/src/: atomics.rs  lib.rs
prefix-sum-rust/shared/: Cargo.toml
prefix-sum-rust/shared/src/: lib.rs
prefix-sum-rust/src/: main.rs  shader.wgsl
