[package]
name = "rust-gpu-prefix-shaders"
version = "0.1.0"
authors = ["Raph Levien <raph@google.com>"]
license = "MIT/Apache-2.0"
description = "A simple compute shader example that draws in a window, based on wgpu."
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "56ba2d2afa5a64db26cac631d33c42fca521f1d2", features = [
    "glam",
    "const-generics",
] }
rust-gpu-prefix-shared = { path = "../shared" }
